<package>
  <name>jsk_ik_server</name>
  <description>
     jsk_ik_server
  </description>
  <author email="furuta@jsk.t.u-tokyo.ac.jp">furuta</author>
  <maintainer email="furuta@jsk.t.u-tokyo.ac.jp">furuta</maintainer>
  <license>BSD</license>
  <version>0.1.15</version>
  <url>http://ros.org/wiki/jsk_ik_server</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roseus</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>mk</build_depend>
  <run_depend>roseus</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>rostest</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>mk</run_depend>
</package>


